--- a/pom.xml
+++ b/pom.xml
@@ -1,8 +1,8 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>io.anserini</groupId>
-  <artifactId>anserini</artifactId>
-  <version>0.2.1-SNAPSHOT</version>
+  <artifactId>anserini-embeddings</artifactId>
+  <version>0.0.1-SNAPSHOT</version>
   <name>Anserini</name>
   <description>An information retrieval toolkit built on Lucene</description>
   <url>http://anserini.io/</url>
@@ -38,8 +38,8 @@
   </properties>
 
   <scm>
-    <connection>scm:git:git@github.com:castorini/Anserini.git</connection>
-    <developerConnection>scm:git:git@github.com:castorini/Anserini.git</developerConnection>
+    <connection>scm:git:git@github.com:castorini/Anserini-embeddings.git</connection>
+    <developerConnection>scm:git:git@github.com:castorini/Anserini-embeddings.git</developerConnection>
     <url>git@github.com:castorini/Anserini.git</url>
     <tag>HEAD</tag>
   </scm>
